--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,6 +5,7 @@ body {
         'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    font-size: 13px;
 }
 
 code {
