--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,6 +10,7 @@ body {
     --color-dividers: #555;
     --color-servers-bg: #444;
     --color-services-bg: #373737;
+    --color-method-bg: #2e2e2e;
     --color-request-bg: #222;
     --color-highlight: #6fa67c;
     --color-text: #fff;
