--- a/src/styles/ToolbarWrapper.module.css
+++ b/src/styles/ToolbarWrapper.module.css
@@ -1,5 +1,6 @@
 .wrapper {
     height: calc(100% - 10px);
+    width: 100%;
     display: flex;
     flex-direction: column;
     border-bottom: 10px solid var(--color-dividers);
