--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -49,3 +49,7 @@ code {
 .cm-s-monokai.CodeMirror {
     background: var(--color-request-bg) !important;
 }
+
+.cm-s-monokai .CodeMirror-gutters {
+    background: var(--color-method-bg) !important;
+}
