--- a/src/drawer/styles/Services.module.css
+++ b/src/drawer/styles/Services.module.css
@@ -4,3 +4,19 @@
     height: 100%;
     overflow-x: hidden;
 }
+
+.isLoading {
+    animation-name: spin;
+    animation-duration: 4000ms;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
