--- a/src/drawer/styles/Services.module.css
+++ b/src/drawer/styles/Services.module.css
@@ -12,6 +12,10 @@
     animation-timing-function: linear;
 }
 
+.textWrapper {
+    padding: 10px;
+}
+
 @keyframes spin {
     from {
         transform: rotate(0deg);
