Add response time (#4)
* add benchmarking to BE

* add response time

* style response time

* remove unused benchmark endpoint

--- a/src/styles/ResultsToolbar.module.css
+++ b/src/styles/ResultsToolbar.module.css
@@ -7,3 +7,18 @@
 .toolbar {
     background-color: blue;
 }
+
+.responseTime {
+    color: white;
+    line-height: 30px;
+}
+
+.timeValue {
+    font-weight: bold;
+}
+
+.toolbarWrapper {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
