--- a/src/styles/Results.module.css
+++ b/src/styles/Results.module.css
@@ -9,5 +9,12 @@
 .code {
     font-size: 13px;
     white-space: pre-wrap;
+}
+
+.success {
     color: var(--color-code-text);
+}
+
+.error {
+    color: var(--color-error-code-text);
 }
