--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -24,6 +24,8 @@ body {
     --color-code-text: #f8f8f2;
     --color-code-string: #e6db74;
 
+    --color-error-code-text: red;
+
     background: var(--color-dividers);
 }
 
