--- a/src/styles/History.module.css
+++ b/src/styles/History.module.css
@@ -1,9 +1,17 @@
 .wrapper {
+    position: relative;
+    top: -10px;
     background: var(--color-services-bg);
-    height: 100%;
+    height: calc(100% + 10px);
     width: 100%;
     overflow-x: hidden;
     color: var(--color-text);
+}
+
+.toolbarWrapper {
+    background: var(--color-dividers);
+    padding: 10px 0;
+    display: flex;
 }
 
 .titleBar {
@@ -25,6 +33,10 @@
     outline: none;
     background: transparent;
     cursor: pointer;
+}
+
+.hideButtonWrapper {
+    margin-right: 6px;
 }
 
 .entriesContainer {
