--- a/src/styles/ResultsWrapper.module.css
+++ b/src/styles/ResultsWrapper.module.css
@@ -15,6 +15,32 @@
     height: 70px;
 }
 
+.copy {
+    cursor: pointer;
+    position: absolute;
+    z-index: 100;
+    left: -38px;
+    top: 50%;
+    border-radius: 35px;
+    color: var(--color-text);
+    font-size: 13px;
+    background-color: var(--color-highlight);
+    width: 70px;
+    height: 70px;
+    border:none;
+    outline: none;
+    box-shadow: none;
+}
+
+.copy:active {
+    background-color: var(--color-button-bg);
+}
+
+.copy:disabled {
+    background-color: var(--color-button-bg);
+    cursor: not-allowed;
+}
+
 .play :global(.st0) {
     fill: var(--color-highlight);
 }
