--- a/src/styles/Toast.module.css
+++ b/src/styles/Toast.module.css
@@ -5,7 +5,8 @@
     transform: translateY(-110%);
     visibility: hidden;
     transition: 0.3s cubic-bezier(0, 0, 0.2, 1);
-    width: 300px;
+    min-width: 300px;
+    max-width: 80%;
     color: var(--color-text);
   }
   .toastContainer[data-visible="true"] {
@@ -13,6 +14,7 @@
     transform: translateY(0);
     visibility: visible;
     transition: transform 0.5s cubic-bezier(0, 0, 0.2, 1);
+    z-index: 10;
   }
   .toast:focus {
     outline: none;
@@ -23,4 +25,21 @@
     overflow-wrap: break-word;
     box-shadow: 1px 2px 8px 0 rgba(34, 34, 34, 0.25);
     background: var(--color-dividers);
+    display: flex;
+    flex-direction: column;
+  }
+  .closeButton {
+    align-self: flex-end;
+    line-height: unset;
+    padding: 2px 7px;
+  }
+  .code {
+    font-family: monospace;
+    background: #b7d3be;
+    color: #222;
+    padding: 3px;
+    margin: 0 0 12px;
+    min-height: 6em;
+    /* initial width-textarea is resizable so it will be contrained by container max-width */
+    width: 500px; 
   }
