--- a/src/styles/Toast.module.css
+++ b/src/styles/Toast.module.css
@@ -1,4 +1,3 @@
-/* react components */
 .toastContainer {
     position: fixed;
     left: 40%;
@@ -8,38 +7,37 @@
     min-width: 300px;
     max-width: 80%;
     color: var(--color-text);
-  }
-  .toastContainer[data-visible="true"] {
+}
+.toastContainer[data-visible='true'] {
     top: 10%;
     transform: translateY(0);
     visibility: visible;
     transition: transform 0.5s cubic-bezier(0, 0, 0.2, 1);
     z-index: 10;
-  }
-  .toast:focus {
+}
+.toast:focus {
     outline: none;
-  }
-  .toast {
+}
+.toast {
     border-radius: 2px;
-    padding: 10px 20px;
+    padding: var(--standard-padding) calc(var(--standard-padding * 2));
     overflow-wrap: break-word;
     box-shadow: 1px 2px 8px 0 rgba(34, 34, 34, 0.25);
     background: var(--color-dividers);
     display: flex;
     flex-direction: column;
-  }
-  .closeButton {
+}
+.closeButton {
     align-self: flex-end;
     line-height: unset;
-    padding: 2px 7px;
-  }
-  .code {
+    padding: var(--standard-padding);
+}
+.code {
     font-family: monospace;
     background: #b7d3be;
     color: #222;
     padding: 3px;
-    margin: 0 0 12px;
-    min-height: 6em;
+    margin: 0 0 var(--standard-padding);
     /* initial width-textarea is resizable so it will be contrained by container max-width */
-    width: 500px; 
-  }
+    width: 500px;
+}
