--- a/src/styles/ToolbarWrapper.module.css
+++ b/src/styles/ToolbarWrapper.module.css
@@ -1,14 +1,14 @@
 .wrapper {
-    height: calc(100% - 10px);
+    height: calc(100% - var(--standard-padding));
     width: 100%;
     display: flex;
     flex-direction: column;
-    border-bottom: 10px solid var(--color-dividers);
+    border-bottom: var(--standard-padding) solid var(--color-dividers);
 }
 
 .toolbar {
     background: var(--color-dividers);
-    padding: 10px 0;
+    padding: var(--standard-padding) 0;
     display: flex;
 }
 
