--- a/src/drawer/styles/Servers.module.css
+++ b/src/drawer/styles/Servers.module.css
@@ -8,3 +8,15 @@
 .form {
     display: flex;
 }
+
+.checkboxLabel {
+    display: flex;
+    align-self: center;
+}
+
+.lock {
+    width: 13px;
+    height: 13px;
+    vertical-align: middle;
+    padding-right: 2px;
+}
